<resources>

    <string name="app_name">FirmApp</string>
    <string name="menu_settings">Configuración</string>
    <string name="title_activity_login">FirmApp</string>
    <string name="title">Título</string>
    <string name="share">Comparte:</string>
    <string name="construction">En construcción..</string>
    <string name="destiny">Destinatario</string>
    <string name="subject">Asunto</string>
    <string name="message">Mensaje</string>
    <string name="send">Enviar</string>
    <string name="cause">Propuesta:</string>
    <string name="descause">Descripción Propuesta:</string>
    <string name="email">email</string>
    <string name="login">Log in</string>
    <string name="reg">Registrate en firmApp</string>
    <string name="nameCause">Nombre Causa:</string>
    <string name="descCause">Descripción Causa:</string>
    <string name="dBegin">Inicio Causa:</string>
    <string name="dEnd">Final Causa:</string>
    <string name="tFirm">Firmas necesarias:</string> 
    <string name="name">Nombre:</string>
    <string name="surname">Apellidos:</string>
    <string name="nif">NIF:</string>
    <string name="born">Fecha de Nacimiento:</string>
    <string name="hnif">99999999X</string>
    <string name="province">Provincia:</string>
    <string name="emailR">Email:</string>
    <string name="passwordmin">password</string>
    <string name="password">Contraseña:</string>
    <string name="vpassword">Verifica contraseña:</string>
    <string name="signMenu">Firmar Propuesta</string>
    <string name="profileMenu">Mi Perfil</string>
    <string name="contactMenu">Contacto</string>
    <string name="dropMenu">Eliminar Firma</string>
    <string name="lawMenu">Condiciones Legales</string>
    <string name="logoutMenu">Cerrar Sesión</string>
    <string name="tit_incpass">Email/ Contraseña incorrecta</string>
    <string name="tit_voidpass">Validación incorrecta</string>
    <string name="des_incpass">La contraseña/email que ha proporcionado no es correcta. Por favor, vuelva a intentarlo</string>
    <string name="des_voidpass">Debe informar todos los campos. Por favor, vuelva a intentarlo</string>
    <string name="net_tit">Sin conexión a Internet</string>
    <string name="net_des">Debe estar conectado a una red válida </string>
    <string name="drop_cause">Dejar de dar apoyo a la propuesta?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="droped">Firma Eliminada</string>
    <string name="sign_send">Guardar y Enviar</string>
    <string name="error">Error</string>
    <string name="error_detcause">No se ha podido eliminar la firma. Por favor, vuelva a intentarlo</string>
    <string name="tit_listfirm">Propuestas firmadas</string>
    <string name="tit_listvoid">No ha apoyado ninguna propuesta. Firma y ayudanos a cambiar el mundo</string>
    <string name="tit_sorry">Disculpe las molestias</string>
    <string name="des_sorry">Página en construcción, en breve dispondrá de todas las condiciones legales definidas</string>
    <string name="admin_email">zamora.juanenrique@gmail.com</string>
    <string name="err_email">Formato email incorrecto. Por favor, vuelva a introducirlo</string>
    <string name="err_subject">Por favor, informe el asunto del email</string>
    <string name="err_body">Por favor, debe informar el cuerpo del mensaje</string>
    <string name="firm_screen">Por favor, realize su firma con el dedo sobre la pantalla</string>
    <string name="close_firm">Cerrando firma</string>
    <string name="net_firm">Guardando firma en el sistema</string>
    <string name="net_server">Conectando con el servidor</string>
    <string name="send_data">Enviando datos</string>
    <string name="reg_firm">Firma registrada</string>
    <string name="err_closef">Error enviando firma. Por favor, vuelva a intentarlo más tarde</string>
    <string name="menu_logout">Desea cerrar la sesión?</string>
    <string name="dif_pass">Los campos contraseña deben coincidir</string>
    <string name="face_updated">Facebook actualizado!</string>
    <string name="twit_updated">Twitter actualizado!</string>
    <string name="msg_share">: Apoya esta propuesta a través de firmApp</string>
    <string name="msg_modi">Desea guardar los cambios?</string>
    <string name="msg_newc">Alta dada de alta en el sistema.Gracias.</string>
    <string name="user_name">Debe informar el nombre de usuario</string>
    <string name="remember">Recuerde</string>
    <string name="firm_dup">Ya ha apoyado esta propuesta anteriormente</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="btnnewcause">Crear una Causa</string>

</resources>