<uoc.jezamora.tfc.firmapp.utils.DashboardLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:background="#f8f9fe" >

    <!-- Firm Cause Button -->

    <Button
        android:id="@+id/btnFirmMenu"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/btn_addcause"
        android:text="@string/signMenu" />

    <!-- Profile Button -->

    <Button
        android:id="@+id/btnProfileMenu"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/btn_myprofile"
        android:text="@string/profileMenu" />

    <!-- Drop firm Button -->

    <Button
        android:id="@+id/btnDownMenu"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/btn_downfirm"
        android:text="@string/dropMenu" />

    <!-- New Cause Button -->

    <Button
        android:id="@+id/btnaddnewCause"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/btn_addnewcause"
        android:text="@string/btnnewcause" />

    <!-- Events Button -->

    <Button
        android:id="@+id/btnLaw"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/btn_law"
        android:text="@string/lawMenu" />
    <!-- Events Button -->

    <Button
        android:id="@+id/btnLogout"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/btn_logout"
        android:text="@string/logoutMenu" />

</uoc.jezamora.tfc.firmapp.utils.DashboardLayout>