<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back_book"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/lltitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tit_log" 
            android:contentDescription="@string/title"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp">

        <EditText
            android:id="@+id/txtLogUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minWidth="300dp" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/txtLogPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordmin"
            android:inputType="textPassword"
            android:minWidth="300dp" />

        <Button
            style="@style/btn"
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            
            
            android:text="@string/login" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="bottom|center"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/label_usrname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="55dp"
            android:clickable="true"
            android:textColorHint="#333F"
            android:textColorLink="#334F"
            android:textColor="#00008B"
            android:text="@string/reg"
            android:textSize="20dp"
            android:textStyle="bold" />
        
        

    </LinearLayout>

</LinearLayout>
       

