<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back_white"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtForEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/destiny" >
        </TextView>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:width="170dip" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtForSubject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject" >
        </TextView>

        <EditText
            android:id="@+id/etSubject"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:inputType="text"
            android:width="170dip" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtForBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message" >
        </TextView>

        <EditText
            android:id="@+id/etBody"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:inputType="textMultiLine"
            android:lines="8"
            android:scrollbars="vertical"
            android:width="300dip" >
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:width="150dip" >
    </Button>

</LinearLayout>